--- a/dba/liquibase/incrementales-v1_9.yml
+++ b/dba/liquibase/incrementales-v1_9.yml
@@ -4,8 +4,22 @@ databaseChangeLog:
     - changeSet:
         id: drop-column-healthcare_professional_id-triage
         author: nayerdi
+        dbms: "!mssql"
         changes:
             dropColumn:
+                tableName: triage
+                columnName: healthcare_professional_id
+
+#------------------------- Ajuste drop-column-with-FK para coincidir con MSSQL -----------------------
+    - changeSet:
+        id: drop-column-healthcare_professional_id-triage
+        author: saguero
+        dbms: mssql
+        changes:
+        - dropForeignKeyConstraint:
+            baseTableName: triage
+            constraintName: FK_triage_healthcare_professional_id
+        - dropColumn:
                 tableName: triage
                 columnName: healthcare_professional_id
 
