--- a/dba/liquibase/incrementales-v1_2.yml
+++ b/dba/liquibase/incrementales-v1_2.yml
@@ -60,6 +60,67 @@ databaseChangeLog:
                 ) as diagnosis on true
                 where 	ie.status_id = 1 
                         and b."free" = false
+    - changeSet:   
+        id:  createView-v-institution-V3
+        author: saguero
+        dbms: mssql
+        changes:
+        -  createView:
+            viewName:  v_institution
+            fullDefinition:  false
+            replaceIfExists:  true
+            selectQuery: |-
+                select	distinct ie.institution_id, ie.id as "internment_episode_id", ad.longitude, ad.latitude, CAST(diagnosis.covid_presumptive AS BIT) AS "covid_presumptive"					
+                from 	internment_episode ie 
+                join    institution i on ( ie.institution_id = i.id )
+                join    address ad on i.address_id = ad.id 
+                join    bed b on ie.bed_id = b.id
+                outer apply ( 	
+                    select 	top 1
+                            case when hc.verification_status_id = '76104008' then ${boolean.true} else ${boolean.false} end as "covid_presumptive"
+                    from 	document_health_condition dhc 
+                            join document d on ( dhc.document_id = d.id)
+                            join internment_episode ieSub on ( d.source_id = ieSub.id )
+                            join health_condition hc on ( dhc.health_condition_id = hc.id )
+                    where 	ieSub.institution_id = i.id
+                            and ieSub.id = ie.id
+                            and hc.sctid_code = '186747009'
+                            and d.source_type_id = 0
+                    order by hc.updated_on desc         
+                ) as diagnosis
+                where 	ie.status_id = 1 
+                        and b."free" = ${boolean.false}
+    
+    - changeSet:   
+        id:  createView-v-institution-V3
+        author: saguero
+        dbms: db2
+        changes:
+        -  createView:
+            viewName:  v_institution
+            fullDefinition:  false
+            replaceIfExists:  true
+            selectQuery: |-
+                select	distinct ie.institution_id, ie.id as internment_episode_id, ad.longitude, ad.latitude, CAST(diagnosis.covid_presumptive AS boolean) AS "covid_presumptive"				
+                from 	internment_episode ie 
+                join    institution i on ( ie.institution_id = i.id )
+                join    address ad on i.address_id = ad.id 
+                join    bed b on ie.bed_id = b.id
+                left join lateral ( 	
+                    select 	case when hc.verification_status_id = '76104008' then ${boolean.true} else ${boolean.false} end as covid_presumptive
+                    from 	document_health_condition dhc 
+                            join document d on ( dhc.document_id = d.id)
+                            join internment_episode ieSub on ( d.source_id = ieSub.id )
+                            join health_condition hc on ( dhc.health_condition_id = hc.id )
+                    where 	ieSub.institution_id = i.id
+                            and ieSub.id = ie.id
+                            and hc.sctid_code = '186747009'
+                            and d.source_type_id = 0
+                    order by hc.updated_on desc
+                    limit 1        
+                ) as diagnosis on true
+                where 	ie.status_id = 1 
+                        and b."free" = ${boolean.false}
 
     - changeSet:
         id: add-default-specialty-to-professionals
